[project]
name = "mass-iq"
dynamic = [ "version" ]


[project.urls]
Homepage = "https://github.com/jannickk/mass-iq"

[tool.poetry]
description = "Client package to interact with the massIQ API"
authors = ["Jannick Kappelmann <jannick.kappelmann@gmail.com>"]
license = "MIT"
readme = "README.md"
version = "1.0.0"

packages = [
    { include = "mass_iq" },
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
aiohttp = "^3.14.1"
pydantic-settings = "^2.14.1"
tenacity = "^9.1.4"
cachetools = "^6.2.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pyjwt = "^2.10.1"
jmespath = "^1.0.1"

[tool.poetry.group.dev.dependencies]
openapi-python-client = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


